# SpectralSignalHound-Viewer

./: .gitignore  CMakeLists.txt  README.md  make-manual.sh
cmake/: FindQwt.cmake
res/: resources.qrc
sources/: SHData.cpp  SHData.h  SpectralInspector.h  SpectralInspector.ui  SweepAbout.ui  SweepInspector.cpp  SweepInspector.h  SweepInspector.ui  SweepMainWin.cpp  SweepMainWin.h  SweepMainWin.ui  helpers.cpp  helpers.h  main-spect.cpp  main-sweep.cpp  main.cpp  mainwin.ui
ui/: MainWindow.ui  SpectralInspector.ui  SweepInspector.ui  mainwin.ui
